--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,16 +32,16 @@ body .container {
   height: 666px;
   margin-top: 18%;
 }
-body .container div h1 span {
+body .container .right-box-text h1 span {
   font-size: 74px;
 }
-body .container div div p {
+body .container .right-box-text div p {
   color: #31302f;
   font-size: 24px;
   margin-top: 27px;
   margin-bottom: 3rem;
 }
-body .container div .linkcon {
+body .container .right-box-text div .linkcon {
   border: 1px solid transparent;
   border-radius: 50px;
   width: 148px;
@@ -50,10 +50,10 @@ body .container div .linkcon {
   background-color: #58b360;
   text-decoration: none;
 }
-body .container div .linkcon:hover {
+body .container .right-box-text div .linkcon:hover {
   background-color: #212529;
 }
-body .container div .linkcon span {
+body .container .right-box-text div .linkcon span {
   color: white;
   font-size: 18px;
 }
@@ -61,7 +61,7 @@ body .container .left-box-img {
   width: 586px;
   height: 592px;
   border: transparent;
-  border-radius: 123px 0px 120px 120px;
+  border-radius: 123px 0px 0px 120px;
   padding: 0px;
   position: relative;
   overflow-x: hidden;
@@ -71,7 +71,7 @@ body .container .left-box-img:hover .back-img1 {
   height: 197px;
   border: transparent;
   border-radius: 123px 0px 140px 0px;
-  background-color: rgba(48, 153, 117, 0.8117647059);
+  background-color: rgba(16, 130, 90, 0.8117647059);
   z-index: 2;
 }
 body .container .left-box-img:hover .back-img1 .back-img1-up {
@@ -126,7 +126,7 @@ body .container .left-box-img:hover .back-img2 .back-img2-up {
   width: 205px;
   height: 197px;
   border: transparent;
-  background-color: rgba(48, 153, 117, 0.8117647059);
+  background-color: rgb(31, 177, 126);
   border-radius: 50%;
   z-index: 2;
   position: absolute;
@@ -160,6 +160,12 @@ body .container .left-box-img:hover .back-img2 .img-right {
   to {
     right: 70px;
   }
+}
+body .container .left-box-img:hover .box-in-right-box-bottom-r {
+  display: none;
+}
+body .container .left-box-img:hover .box-in-right-box-bottom-l {
+  display: none;
 }
 body .container .left-box-img .back-img1 {
   width: 246px;
@@ -200,7 +206,7 @@ body .container .left-box-img .back-img1 .right-top {
 body .container .left-box-img .left-between {
   width: 380px;
   height: 197px;
-  background-color: rgba(48, 153, 117, 0.8117647059);
+  background-color: rgba(16, 130, 90, 0.8117647059);
   border: transparent;
   border-radius: 0px 122px 122px 0px;
   z-index: 1;
@@ -237,9 +243,43 @@ body .container .left-box-img .right-between .back-img2 .img-right {
   z-index: 3;
   position: absolute;
 }
+body .container .left-box-img .bottom-line-of-box {
+  display: flex;
+  flex-direction: row;
+  height: 197px;
+  margin-top: 394px;
+}
+body .container .left-box-img .bottom-line-of-box .img-left-bottom img {
+  width: 206px;
+  height: 197px;
+}
+body .container .left-box-img .bottom-line-of-box div .right-box-bottom {
+  width: 380px;
+  height: 197px;
+  background-color: rgba(28, 156, 111, 0.8117647059);
+  border: transparent;
+  border-radius: 0px 122px 122px 0px;
+  z-index: 1;
+  position: absolute;
+}
+body .container .left-box-img .bottom-line-of-box div .right-box-bottom .box-in-right-box-bottom-r {
+  width: 75px;
+  height: 197px;
+  position: absolute;
+  z-index: 2;
+  background-color: #bcd2eb;
+}
+body .container .left-box-img .bottom-line-of-box div .right-box-bottom .box-in-right-box-bottom-l {
+  margin-left: 75px;
+  width: 75px;
+  height: 197px;
+  position: absolute;
+  z-index: 2;
+  background-color: rgba(16, 130, 90, 0.8117647059);
+}
 body .box-list {
   background-color: #309975;
-  height: 1668px;
+  border-bottom: 1px solid white;
 }
 body .box-list .division-text-tailored {
   height: 192px;
@@ -253,14 +293,16 @@ body .box-list .division-text-tailored .box-service {
   height: 32px;
 }
 body .box-list .division-text-tailored .text-tailored p {
+  font-weight: 200;
   font-size: 53px;
 }
 body .box-list .listofitem {
   margin-top: 194px;
+  border-top: 1px solid white;
 }
 body .box-list .listofitem ul li {
-  border-top: 1px solid white;
   background-color: #309975;
+  height: 264px;
 }
 body .box-list .listofitem ul li:hover {
   background-color: #454d66;
@@ -286,6 +328,260 @@ body .box-list .listofitem ul li .paragraph-list p {
   width: 572px;
   font-size: 18px;
   line-height: 1.6;
+}
+body .box-abouts {
+  background-color: #309975;
+  padding-top: 170px;
+  padding-left: 30px;
+}
+body .box-abouts .about-titr {
+  height: 192px;
+  padding: 0px 60px;
+  width: 331px;
+}
+body .box-abouts .about-titr .box-about-titr-text {
+  background-color: white;
+  border: transparent;
+  border-radius: 0 14px 0 0;
+  width: 105px;
+  height: 32px;
+}
+body .box-abouts .about-titr .text-about-titr p {
+  font-size: 53px;
+  font-weight: 200;
+}
+body .box-abouts .colom-second {
+  width: 522px;
+  padding-top: 500px;
+}
+body .box-abouts .colom-tired {
+  width: 378px;
+}
+body .approach {
+  background-color: #bcd2eb;
+}
+body .approach .approach-titr {
+  height: 192px;
+  padding: 40px 78px;
+  width: 331px;
+}
+body .approach .approach-titr .box-approach-titr-text {
+  background-color: white;
+  border: transparent;
+  border-radius: 0 14px 0 0;
+  width: 116px;
+  height: 32px;
+  size: smaller;
+}
+body .approach .approach-titr .text-approach-titr p {
+  width: 700px;
+  font-size: 58px;
+  font-weight: 200;
+}
+body .approach .approach-paragraph {
+  background-color: #309975;
+  border: transparent;
+  border-radius: 0 181px 0 0;
+  margin-left: 80px;
+  margin-top: 100px;
+  height: 505px;
+  font-size: 43px;
+  padding-left: 106px;
+  display: flex;
+  align-items: center;
+}
+body .approach .approach-paragraph p {
+  width: 1037px;
+  margin-bottom: 0;
+}
+body .benefits .benefits-titr {
+  height: 192px;
+  padding: 40px 78px;
+  width: 331px;
+  margin-top: 70px;
+}
+body .benefits .benefits-titr .box-benefits-titr-text {
+  background-color: black;
+  border: transparent;
+  border-radius: 0 14px 0 0;
+  width: 116px;
+  height: 32px;
+  size: smaller;
+  color: white;
+}
+body .benefits .benefits-titr .text-benefits-titr p {
+  width: 835px;
+  font-size: 68px;
+  font-weight: 200;
+}
+body .benefits .svg-box {
+  padding: 0 9px;
+}
+body .benefits .svg-box .svg-1,
+body .benefits .svg-box .svg-2,
+body .benefits .svg-box .svg-3 {
+  margin-left: 70px;
+}
+body .benefits .svg-box .svg-1:hover,
+body .benefits .svg-box .svg-2:hover,
+body .benefits .svg-box .svg-3:hover {
+  transition: 0.5s;
+  transform: scale(0.9, 0.9);
+}
+body .testimonials .testimonials-titr {
+  height: 192px;
+  padding: 40px 78px;
+  width: 331px;
+  margin-top: 70px;
+}
+body .testimonials .testimonials-titr .box-testimonials-titr-text {
+  background-color: black;
+  border: transparent;
+  border-radius: 0 14px 0 0;
+  width: 173px;
+  height: 32px;
+  size: smaller;
+  color: white;
+  display: flex;
+  align-content: center;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+body .testimonials .testimonials-titr .text-testimonials-titr p {
+  width: 773px;
+  font-size: 68px;
+  font-weight: 200;
+}
+body .testimonials .grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  border: 2px solid black;
+}
+body .testimonials .grid-container .grid-item {
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 49px;
+  font-size: 16px;
+  text-align: center;
+  width: 407px;
+}
+body .testimonials .grid-container .grid-item img {
+  width: 252px;
+  height: 249px;
+  border: transparent;
+  border-radius: 50% 50% 50% 0;
+}
+body .testimonials .grid-container .grid-item img:hover {
+  transition: 0.5s;
+  transform: scale(1.2, 1.2);
+}
+body .faq .faq-titr {
+  height: 192px;
+  padding: 40px 78px;
+  width: 331px;
+  margin-top: 70px;
+}
+body .faq .faq-titr .box-faq-titr-text {
+  background-color: black;
+  border: transparent;
+  border-radius: 0 14px 0 0;
+  width: 57px;
+  height: 32px;
+  size: smaller;
+  color: white;
+  display: flex;
+  align-content: center;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+body .faq .faq-titr .text-faq-titr p {
+  width: 773px;
+  font-size: 68px;
+  font-weight: 200;
+}
+body .faq .between-box {
+  margin-top: 121px;
+  width: 387px;
+  margin-left: 73px;
+}
+body .faq .between-box .accordion {
+  --bs-accordion-color: var(--bs-body-color);
+  --bs-accordion-bg: transparent;
+  --bs-accordion-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, border-radius 0.15s ease;
+  --bs-accordion-border-color: transparent;
+  --bs-accordion-border-width: var(--bs-border-width);
+  --bs-accordion-border-radius: transparent;
+  --bs-accordion-inner-border-radius: transparent;
+  --bs-accordion-btn-padding-x: 1.25rem;
+  --bs-accordion-btn-padding-y: 1rem;
+  --bs-accordion-btn-color: var(--bs-body-color);
+  --bs-accordion-btn-bg: var(--bs-accordion-bg);
+  --bs-accordion-btn-icon: url(data:image/svg+xml,%3csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="%23212529"%3e%3cpath fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/%3e%3c/svg%3e);
+  --bs-accordion-btn-icon-width: 1.25rem;
+  --bs-accordion-btn-icon-transform: rotate(-180deg);
+  --bs-accordion-btn-icon-transition: transform 0.2s ease-in-out;
+  --bs-accordion-btn-active-icon: url(data:image/svg+xml,%3csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16" fill="%23052c65"%3e%3cpath fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/%3e%3c/svg%3e);
+  --bs-accordion-btn-focus-border-color: transparent;
+  --bs-accordion-btn-focus-box-shadow: transparent;
+  --bs-accordion-body-padding-x: 1.25rem;
+  --bs-accordion-body-padding-y: 1rem;
+  --bs-accordion-active-color: var(--bs-primary-text-emphasis);
+  --bs-accordion-active-bg: transparent;
+}
+body .faq .between-box .accordion .accordion-item {
+  border-bottom: 1px solid black;
+}
+body .faq .between-box .accordion .accordion-body {
+  padding: var(--bs-accordion-body-padding-y) var(--bs-accordion-body-padding-x);
+  font-weight: 200;
+}
+body .faq .between-box .accordion .accordion-button {
+  border-top-left-radius: var(--bs-accordion-inner-border-radius);
+  border-top-right-radius: var(--bs-accordion-inner-border-radius);
+  font-weight: bolder;
+  color: black;
+  padding-top: 25px;
+  padding-bottom: 32px;
+}
+body .faq .end-box {
+  margin-top: 121px;
+}
+body .footer-box {
+  height: 1000px;
+  background-color: #113025;
+  margin-top: 300px;
+}
+body .footer-box .get-in-touch {
+  display: flex;
+  width: 90%;
+  background-color: #bcd2eb;
+  height: 800px;
+  border: transparent;
+  border-radius: 50px 50px 0 0;
+}
+body .footer-box .get-in-touch .right-box-get {
+  width: 50%;
+  padding: 102px;
+}
+body .footer-box .get-in-touch .right-box-get .span-right-box-get {
+  font-size: 71px;
+  font-weight: 200;
+}
+body .footer-box .get-in-touch .input-name-lastname {
+  padding-top: 120px;
+  flex-wrap: wrap;
+}
+body .footer-box .get-in-touch .input-name-lastname .btn-Get-a-quote {
+  width: 551px;
+  background-color: black;
+  color: white;
+  border: transparent;
+  border-radius: 22px;
+  height: 48px;
+}
+body .footer-box .get-in-touch .input-name-lastname .btn-Get-a-quote:hover {
+  background-color: white;
+  color: black;
+  border: 2px solid black;
 }
 
 /*# sourceMappingURL=style.css.map */
