--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -56,8 +56,10 @@ body {
 
         margin-top: 18%;
 
+        .right-box-text {
 
-        div {
+
+
             h1 {
                 span {
                     font-size: 74px;
@@ -73,28 +75,29 @@ body {
                 }
 
             }
-        }
-
-        div {
-            .linkcon {
-                border: 1px solid transparent;
-                border-radius: 50px;
-                width: 148px;
-                height: 48px;
-
-                display: block;
-                background-color: #58b360;
-                text-decoration: none;
-
-                &:hover {
-                    background-color: #212529;
-                }
 
 
-                span {
-                    color: white;
-                    font-size: 18px;
+            div {
+                .linkcon {
+                    border: 1px solid transparent;
+                    border-radius: 50px;
+                    width: 148px;
+                    height: 48px;
 
+                    display: block;
+                    background-color: #58b360;
+                    text-decoration: none;
+
+                    &:hover {
+                        background-color: #212529;
+                    }
+
+
+                    span {
+                        color: white;
+                        font-size: 18px;
+
+                    }
                 }
             }
         }
@@ -104,7 +107,7 @@ body {
             height: 592px;
 
             border: transparent;
-            border-radius: 123px 0px 120px 120px;
+            border-radius: 123px 0px 0px 120px;
             padding: 0px;
             position: relative;
             overflow-x: hidden;
@@ -117,7 +120,7 @@ body {
                     height: 197px;
                     border: transparent;
                     border-radius: 123px 0px 140px 0px;
-                    background-color: #309975cf;
+                    background-color: #10825acf;
                     z-index: 2;
 
 
@@ -198,11 +201,11 @@ body {
                         width: 205px;
                         height: 197px;
                         border: transparent;
-                        background-color: #309975cf;
+                        background-color: rgb(31 177 126);
                         border-radius: 50%;
                         z-index: 2;
                         position: absolute;
-                      
+
                         animation-timing-function: ease;
                         animation: img2 1s;
                         animation-fill-mode: forwards;
@@ -234,7 +237,7 @@ body {
                         border-radius: 50%;
                         z-index: 3;
                         position: absolute;
-                        
+
                         animation-timing-function: ease;
                         animation: img2 1s;
                         animation-fill-mode: forwards;
@@ -253,6 +256,14 @@ body {
                         }
 
                     }
+                }
+
+                .box-in-right-box-bottom-r {
+                    display: none;
+                }
+
+                .box-in-right-box-bottom-l {
+                    display: none;
                 }
 
 
@@ -316,8 +327,8 @@ body {
             .left-between {
                 width: 380px;
                 height: 197px;
-               
-                background-color: #309975cf;
+
+                background-color: #10825acf;
                 border: transparent;
                 border-radius: 0px 122px 122px 0px;
                 z-index: 1;
@@ -350,7 +361,7 @@ body {
                         border-radius: 50%;
                         z-index: 2;
                         position: absolute;
-                    
+
                         padding: 0px;
 
 
@@ -370,6 +381,57 @@ body {
 
             }
 
+            .bottom-line-of-box {
+                display: flex;
+                flex-direction: row;
+                height: 197px;
+                margin-top: 394px;
+
+                .img-left-bottom {
+
+
+                    img {
+                        width: 206px;
+                        height: 197px;
+                    }
+                }
+
+                div {
+                    .right-box-bottom {
+                        width: 380px;
+                        height: 197px;
+                        background-color: #1c9c6fcf;
+                        border: transparent;
+                        border-radius: 0px 122px 122px 0px;
+                        z-index: 1;
+                        position: absolute;
+
+                        .box-in-right-box-bottom-r {
+                            width: 75px;
+                            height: 197px;
+                            position: absolute;
+                            z-index: 2;
+                            background-color: #bcd2eb;
+                        }
+
+                        .box-in-right-box-bottom-l {
+                            margin-left: 75px;
+                            width: 75px;
+                            height: 197px;
+                            position: absolute;
+                            z-index: 2;
+                            background-color: #10825acf;
+                        }
+
+
+
+
+
+                    }
+
+                }
+            }
+
 
 
 
@@ -383,106 +445,536 @@ body {
     }
 
 
-        .box-list {
-            background-color: #309975;
-            height: 1668px;
-
-            .division-text-tailored {
-                height: 192px;
-                padding: 164px 0px 40px 92px;
-
-                .box-service {
-                    background-color: white;
-                    border: transparent;
-                    border-radius: 0 14px 0 0;
-                    width: 105px;
-                    height: 32px;
+    .box-list {
+        background-color: #309975;
+        border-bottom: 1px solid white;
 
 
+        .division-text-tailored {
+            height: 192px;
+            padding: 164px 0px 40px 92px;
+
+            .box-service {
+                background-color: white;
+                border: transparent;
+                border-radius: 0 14px 0 0;
+                width: 105px;
+                height: 32px;
 
 
-                }
-
-                .text-tailored {
-                    p {
 
 
-                        font-size: 53px;
-
-
-                    }
-                }
             }
 
-            .listofitem {
-                margin-top: 194px;
+            .text-tailored {
+                p {
+
+                    font-weight: 200;
+                    font-size: 53px;
 
 
-                ul {
+                }
+            }
+        }
+
+        .listofitem {
+            margin-top: 194px;
+            border-top: 1px solid white;
 
 
-
-                    li {
-
-                        border-top: 1px solid white;
-                        background-color: #309975;
-
-                        &:hover {
-                            background-color: #454d66;
-                            transition: 1s;
-                            color: white;
-                        }
-
-
+            ul {
 
 
 
+                li {
 
-                        .span-right {
-                            height: 246px;
-                            display: flex;
-                            justify-content: space-around;
+
+                    background-color: #309975;
+                    height: 264px;
 
 
 
 
-                            .span-number {
-                                span {
-                                    font-size: 72px;
+                    &:hover {
+                        background-color: #454d66;
+                        transition: 1s;
+                        color: white;
+                    }
 
-                                }
+
+
+
+
+
+
+                    .span-right {
+                        height: 246px;
+                        display: flex;
+                        justify-content: space-around;
+
+
+
+
+                        .span-number {
+                            span {
+                                font-size: 72px;
 
                             }
 
-                            .span-he {
-                                span {
-                                    font-size: 32px;
-
-
-                                }
-                            }
-
                         }
 
-                        .paragraph-list {
-                            display: flex;
-                            justify-content: space-around;
+                        .span-he {
+                            span {
+                                font-size: 32px;
 
-
-
-                            p {
-                                width: 572px;
-                                font-size: 18px;
-                                line-height: 1.6;
 
                             }
                         }
 
                     }
+
+                    .paragraph-list {
+                        display: flex;
+                        justify-content: space-around;
+
+
+
+                        p {
+                            width: 572px;
+                            font-size: 18px;
+                            line-height: 1.6;
+
+                        }
+                    }
+
+                }
+            }
+        }
+
+    }
+
+    .box-abouts {
+
+
+        background-color: #309975;
+        padding-top: 170px;
+        padding-left: 30px;
+
+
+        .about-titr {
+            height: 192px;
+            padding: 0px 60px;
+            width: 331px;
+
+            .box-about-titr-text {
+
+
+                background-color: white;
+                border: transparent;
+                border-radius: 0 14px 0 0;
+                width: 105px;
+                height: 32px;
+
+
+
+
+            }
+
+            .text-about-titr {
+                p {
+
+
+                    font-size: 53px;
+                    font-weight: 200;
+
+                }
+            }
+        }
+
+
+
+        .colom-second {
+            width: 522px;
+            padding-top: 500px;
+
+
+
+
+
+
+
+        }
+
+        .colom-tired {
+            width: 378px;
+        }
+
+
+
+    }
+
+    .approach {
+        background-color: #bcd2eb;
+
+
+
+        .approach-titr {
+            height: 192px;
+            padding: 40px 78px;
+            width: 331px;
+
+            .box-approach-titr-text {
+
+
+                background-color: white;
+                border: transparent;
+                border-radius: 0 14px 0 0;
+                width: 116px;
+                height: 32px;
+                size: smaller;
+
+            }
+
+            .text-approach-titr {
+                p {
+
+                    width: 700px;
+                    font-size: 58px;
+                    font-weight: 200;
+
+                }
+            }
+        }
+
+        .approach-paragraph {
+            background-color: #309975;
+            border: transparent;
+            border-radius: 0 181px 0 0;
+            margin-left: 80px;
+            margin-top: 100px;
+            height: 505px;
+            font-size: 43px;
+            padding-left: 106px;
+            display: flex;
+            align-items: center;
+
+            p {
+                width: 1037px;
+                margin-bottom: 0;
+
+            }
+
+
+
+        }
+
+
+
+
+
+    }
+
+    .benefits {
+
+
+
+        .benefits-titr {
+            height: 192px;
+            padding: 40px 78px;
+            width: 331px;
+            margin-top: 70px;
+
+
+            .box-benefits-titr-text {
+
+
+                background-color: black;
+                border: transparent;
+                border-radius: 0 14px 0 0;
+                width: 116px;
+                height: 32px;
+                size: smaller;
+                color: white;
+
+            }
+
+            .text-benefits-titr {
+                p {
+                    width: 835px;
+                    font-size: 68px;
+                    font-weight: 200;
+                }
+            }
+        }
+
+        .svg-box {
+            padding: 0 9px;
+
+            .svg-1,
+            .svg-2,
+            .svg-3 {
+                margin-left: 70px;
+
+
+
+                &:hover {
+                    transition: 0.5s;
+                    transform: scale(0.9, 0.9);
                 }
             }
 
         }
 
-    
+
+
+
+
+    }
+
+    .testimonials {
+
+
+        .testimonials-titr {
+            height: 192px;
+            padding: 40px 78px;
+            width: 331px;
+            margin-top: 70px;
+
+
+            .box-testimonials-titr-text {
+
+
+                background-color: black;
+                border: transparent;
+                border-radius: 0 14px 0 0;
+                width: 173px;
+                height: 32px;
+                size: smaller;
+                color: white;
+                display: flex;
+                align-content: center;
+                flex-wrap: wrap;
+                justify-content: center;
+            }
+
+            .text-testimonials-titr {
+                p {
+                    width: 773px;
+                    font-size: 68px;
+                    font-weight: 200;
+
+                }
+            }
+        }
+
+
+
+
+
+        .grid-container {
+            display: grid;
+            grid-template-columns: auto auto auto;
+            border: 2px solid black;
+
+
+
+            .grid-item {
+
+                border: 1px solid rgba(0, 0, 0, 0.8);
+                padding: 49px;
+                font-size: 16px;
+                text-align: center;
+                width: 407px;
+
+
+                img {
+                    width: 252px;
+                    height: 249px;
+                    border: transparent;
+                    border-radius: 50% 50% 50% 0;
+
+                    &:hover {
+                        transition: 0.5s;
+                        transform: scale(1.2, 1.2);
+                    }
+                }
+
+            }
+        }
+    }
+
+
+    .faq {
+
+
+        .faq-titr {
+            height: 192px;
+            padding: 40px 78px;
+            width: 331px;
+            margin-top: 70px;
+
+
+            .box-faq-titr-text {
+
+
+                background-color: black;
+                border: transparent;
+                border-radius: 0 14px 0 0;
+                width: 57px;
+                height: 32px;
+                size: smaller;
+                color: white;
+                display: flex;
+                align-content: center;
+                flex-wrap: wrap;
+                justify-content: center;
+            }
+
+            .text-faq-titr {
+                p {
+                    width: 773px;
+                    font-size: 68px;
+                    font-weight: 200;
+
+                }
+            }
+        }
+
+        .between-box {
+            margin-top: 121px;
+            width: 387px;
+            margin-left: 73px;
+
+            .accordion {
+
+                --bs-accordion-color: var(--bs-body-color);
+                --bs-accordion-bg: transparent;
+                --bs-accordion-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out, border-radius 0.15s ease;
+                --bs-accordion-border-color: transparent;
+                --bs-accordion-border-width: var(--bs-border-width);
+                --bs-accordion-border-radius: transparent;
+                --bs-accordion-inner-border-radius: transparent;
+                --bs-accordion-btn-padding-x: 1.25rem;
+                --bs-accordion-btn-padding-y: 1rem;
+                --bs-accordion-btn-color: var(--bs-body-color);
+                --bs-accordion-btn-bg: var(--bs-accordion-bg);
+                --bs-accordion-btn-icon: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23212529'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e);
+                --bs-accordion-btn-icon-width: 1.25rem;
+                --bs-accordion-btn-icon-transform: rotate(-180deg);
+                --bs-accordion-btn-icon-transition: transform 0.2s ease-in-out;
+                --bs-accordion-btn-active-icon: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23052c65'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e);
+                --bs-accordion-btn-focus-border-color: transparent;
+                --bs-accordion-btn-focus-box-shadow: transparent;
+                --bs-accordion-body-padding-x: 1.25rem;
+                --bs-accordion-body-padding-y: 1rem;
+                --bs-accordion-active-color: var(--bs-primary-text-emphasis);
+                --bs-accordion-active-bg: transparent;
+
+                .accordion-item {
+                    border-bottom: 1px solid black;
+                }
+
+                .accordion-body {
+                    padding: var(--bs-accordion-body-padding-y) var(--bs-accordion-body-padding-x);
+                    font-weight: 200;
+                }
+
+                .accordion-button {
+                    border-top-left-radius: var(--bs-accordion-inner-border-radius);
+                    border-top-right-radius: var(--bs-accordion-inner-border-radius);
+                    font-weight: bolder;
+                    color: black;
+                    padding-top: 25px;
+                    padding-bottom: 32px;
+                }
+
+            }
+
+        }
+
+        .end-box {
+            margin-top: 121px;
+        }
+
+
+    }
+
+    .footer-box {
+
+
+
+
+
+        height: 1000px;
+        background-color: #113025;
+        margin-top: 300px;
+
+        .get-in-touch {
+            display: flex;
+
+            width: 90%;
+            background-color: #bcd2eb;
+            height:800px;
+            border: transparent;
+            border-radius: 50px 50px 0 0;
+
+
+            .right-box-get {
+                width: 50%;
+                padding: 102px;
+
+                .span-right-box-get {
+                    font-size: 71px;
+                    font-weight: 200;
+                }
+            }
+
+            .input-name-lastname {
+                padding-top: 120px;
+            
+                flex-wrap: wrap;
+
+                .btn-Get-a-quote {
+
+                    width: 551px;
+                    background-color: black;
+                    color: white;
+                    border: transparent;
+                    border-radius: 22px;
+                    height:48px;
+                
+                    &:hover{
+                        background-color:white;
+                        color:black; 
+                        border:2px solid black;
+                    }
+                }
+
+            }
+
+
+
+
+
+
+
+
+        }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    }
+
 }
