--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -905,7 +905,7 @@ body {
 
 
 
-        height: 1000px;
+        
         background-color: #113025;
         margin-top: 300px;
 
@@ -952,16 +952,11 @@ body {
 
             }
 
-
-
-
-
-
-
-
         }
 
-
+.footer-end{
+border-bottom:3px solid white;
+}
 
 
 
